--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "genius-memory-game",
+  "homepage": "https://victorcanto.github.io/genius-memory-game",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack -w",
+    "dev": "webpack --mode development --watch",
+    "build": "webpack --mode production",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,10 +21,16 @@
   "bugs": {
     "url": "https://github.com/victorcanto/genius-memory-game/issues"
   },
-  "homepage": "https://github.com/victorcanto/genius-memory-game#readme",
   "devDependencies": {
-    "ts-loader": "^9.2.6",
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-typescript": "^7.15.0",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^6.3.0",
+    "gh-pages": "^3.2.3",
+    "html-webpack-plugin": "^5.3.2",
     "typescript": "^4.4.3",
+    "webpack": "^5.56.0",
     "webpack-cli": "^4.8.0"
   }
 }
